--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+node_modules
 
 # End of https://www.toptal.com/developers/gitignore/api/vscode
