--- a/bloco_27/dia_1/exercises/package.json
+++ b/bloco_27/dia_1/exercises/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-rescue": "^1.1.31",
     "mongodb": "^3.6.9"
